# RP2350_ThesisProject

./: CMakeLists.txt  README.md  main.c
BinaryMatMul/: .gitignore  CMakeLists.txt  README.md
BinaryMatMul/include/: BinaryMatMul.h
BinaryMatMul/src/: BinaryMatMul.c
results/03_07_25__18_23/: note.txt
results/30_06_25__18-10/: dati.csv  note.txt
results/30_06_25__18-16/: dati.csv  note.txt
results/30_06_25__18-26/: dati.csv  note.txt
results/30_06_25__18-29/: dati.csv
results/30_06_25__19-05/: dati.csv  note.txt
